update api proto to include new fields
